# tcre

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  check.h  tcre.c  tcre.h  tcre.pc.in  tcre.test.c
